0.9.0 - 2013-11-10
------------------ 

- Initial release.


0.9.1 - 2013-11-16
------------------

- Fix for PRCServer init. No input for IP address is now empty string instead of host name.

- Connection errors within PRCClient methods now raise PRCClientException instead of CommException.

- Basic test has been added.

0.9.2 - 2014-01-21
------------------

- Communication protocol fix. Added timeout to receive functions.

- cpickle is used instead of pickle for better performance.

0.9.3 - 2014-01-21
------------------

- Communication protocol fix. Adding proper exception handling.
